--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,5 +1,5 @@
 .checkout-page {
-    width: 55%;
+    width: 55vw;
     min-height: 90vh;
     display: flex;
     flex-direction: column;
@@ -27,6 +27,17 @@
       margin-top: 30px;
       margin-left: auto;
       font-size: 36px;
+    }
+    button{
+      margin-left: auto;
+      margin-top: 40px;
+    }
+
+    .test-warning{
+      text-align: center;
+      color: red;
+      font-size: 24px;
+      margin-top: 40px;
     }
   }
   
